<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddTask">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@id/btn_save"
            android:layout_toLeftOf="@id/btn_save"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/txt_owner" />

        <ImageButton
            android:id="@+id/btn_save"
            android:onClick="saveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_save"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <EditText
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_title"
        android:autofillHints="@string/txt_title"
        android:inputType="textShortMessage"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_content"
        style="@android:style/Widget.DeviceDefault.Light.EditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="@string/txt_content"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/txt_content"
        android:inputType="textMultiLine"
        android:visibility="visible" />


</LinearLayout>